# AI-Newsletter

./: .env.example  .env.template  .env.test  .gitignore  README.md  pyproject.toml
.github/workflows/: daily-newsletter.yml
app/: config.py  main.py  pipeline.py
app/agents/: __init__.py  affiliate.py  editor.py  image.py  outline.py  publisher.py  research.py  seo.py  topic.py  writer.py
app/database/: __init__.py  schema.sql
app/models/: __init__.py  affiliate.py  article.py  image.py  outline.py  publish.py  research.py  run_state.py  seo.py  topic.py
app/prompts/: __init__.py  affiliate.md  editor.md  image.md  outline.md  research.md  seo.md  topic_discovery.md  topic_ranking.md  writer.md
app/services/: __init__.py  beehiiv.py  database.py  gemini.py  html.py  image.py  markdown.py
app/templates/: beehiiv.html.j2
app/utils/: __init__.py  logging.py
seeds/: affiliate_links copy.json
tests/: test_agents.py  test_all.py  test_models.py  test_services.py
