[project]
name = "newsletter-ai"
version = "1.0.0"
description = "AI Newsletter Automation System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-generativeai>=0.8.0",
    "loguru>=0.7.2",
    "tenacity>=8.3.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "markdown>=3.6",
    "jinja2>=3.1.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "pollinations>=0.1.0",
]
optional-dependencies = {
    "dev": [
        "pytest>=8.3.0",
        "pytest-asyncio>=0.23.0",
        "pytest-mock>=3.12.0",
        "ruff>=0.6.0",
        "mypy>=1.11.0",
    ]
}

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "I", "UP", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]